--- a/ParagonAtmLibrary/ParagonAtmLibrary.csproj
+++ b/ParagonAtmLibrary/ParagonAtmLibrary.csproj
@@ -6,7 +6,7 @@
     <Nullable>disable</Nullable>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>CodeFoxtrot.ParagonAtmLibrary</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <Authors>CodeFoxtrot</Authors>
     <Company>CodeFoxtrot</Company>
     <Product>ParagonAtmLibrary</Product>
@@ -17,6 +17,8 @@
     <RepositoryUrl>https://github.com/CodeFontana/ParagonAtmLibrary</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Paragon Virtual ATM</PackageTags>
+    <AssemblyVersion>1.0.2.1</AssemblyVersion>
+    <FileVersion>1.0.2.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
