--- a/ConsoleUI/Properties/launchSettings.json
+++ b/ConsoleUI/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "VirtualAtmClient": {
+    "ConsoleUI": {
       "commandName": "Project",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
