--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -45,43 +45,73 @@
     "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
     "Pin": "1234"
   },
-  "Screens": {
-    "InService": [
-      "Welcome",
-      "Please insert and remove your card"
-    ],
-    "OutService": [
-      "This ATM is temporarily unavailable",
-      "We're sorry for the inconvenience"
-    ],
-    "PIN": [
-      "Please enter your Personal Identification Number"
-    ],
-    "Transactions": [
-      "Please select the type of transaction by pressing the appropriate key"
-    ],
-    "AccountType": [
-      "Please select an account type"
-    ],
-    "Destination": [
-      "Where would you like your balance"
-    ],
-    "PleaseWait": [
-      "Please wait"
-    ],
-    "DesiredAccount": [
-      "Please select the desired account"
-    ],
-    "BalanceInqury": [
-      "Balance inquiry for",
-      "Available Balance",
-      "Total Balance"
-    ],
-    "TransactionComplete": [
-      "Your transaction is complete",
-      "Do you want another transaction"
-    ]
-  },
+  "Screens": [
+    {
+      "Name": "InService",
+      "Text": [
+        "Welcome",
+        "Please insert and remove your card"
+      ]
+    },
+    {
+      "Name": "OutService",
+      "Text": [
+        "This ATM is temporarily unavailable",
+        "We're sorry for the inconvenience"
+      ]
+    },
+    {
+      "Name": "PIN",
+      "Text": [
+        "Please enter your Personal Identification Number"
+      ]
+    },
+    {
+      "Name": "Transactions",
+      "Text": [
+        "Please select the type of transaction by pressing the appropriate key"
+      ]
+    },
+    {
+      "Name": "AccountType",
+      "Text": [
+        "Please select an account type"
+      ]
+    },
+    {
+      "Name": "Destination",
+      "Text": [
+        "Where would you like your balance"
+      ]
+    },
+    {
+      "Name": "PleaseWait",
+      "Text": [
+        "Please wait"
+      ]
+    },
+    {
+      "Name": "DesiredAccount",
+      "Text": [
+        "Please select the desired account"
+      ]
+    },
+    {
+      "Name": "BalanceInqury",
+      "Text": [
+        "Balance inquiry for",
+        "Available Balance",
+        "Total Balance"
+      ]
+    },
+    {
+      "Name": "TransactionComplete",
+      "Text": [
+        "Your transaction is complete",
+        "Do you want another transaction"
+      ]
+    }
+  ],
   "Preferences": {
     "DownloadPath": "C:\\Users\\Brian\\Desktop"
   }
