Change log name

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -6,7 +6,7 @@
       "Microsoft": "Debug"
     },
     "FileLogger": {
-      "LogName": "VirtualAtmClient",
+      "LogName": "ConsoleUI",
       "LogFolder": "",
       "LogMaxBytes": 52428800,
       "LogMaxCount": 10,
