Define more screens

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -110,6 +110,24 @@
         "Your transaction is complete",
         "Do you want another transaction"
       ]
+    },
+    {
+      "Name": "MoreTime",
+      "Text": [
+        "Do you need more time"
+      ]
+    },
+    {
+      "Name": "AnotherTransaction",
+      "Text": [
+        "Do you want another transaction"
+      ]
+    },
+    {
+      "Name": "TakeCard",
+      "Text": [
+        "Please take your card"
+      ]
     }
   ],
   "Preferences": {
