Add language selection screen

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -61,6 +61,12 @@
       ]
     },
     {
+      "Name": "Language",
+      "Text": [
+        "Please select the language you wish to use"
+      ]
+    },
+    {
       "Name": "PIN",
       "Text": [
         "Please enter your Personal Identification Number"
