Specify transaction language

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -44,6 +44,9 @@
   "Card": {
     "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
     "Pin": "1234"
+  }
+  "Transaction": {
+    "Language": "English"
   },
   "Screens": [
     {
