Refinements to screen names and others

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -44,9 +44,11 @@
   "Card": {
     "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
     "Pin": "1234"
-  }
+  },
   "Transaction": {
-    "Language": "English"
+    "Language": "English",
+    "AccountType": "Checking",
+    "AccountName": "Checking|T"
   },
   "Screens": [
     {
@@ -76,7 +78,7 @@
       ]
     },
     {
-      "Name": "Transactions",
+      "Name": "TransactionType",
       "Text": [
         "Please select the type of transaction by pressing the appropriate key"
       ]
@@ -88,7 +90,7 @@
       ]
     },
     {
-      "Name": "Destination",
+      "Name": "BalanceDestination",
       "Text": [
         "Where would you like your balance"
       ]
@@ -100,13 +102,13 @@
       ]
     },
     {
-      "Name": "DesiredAccount",
+      "Name": "AccountName",
       "Text": [
         "Please select the desired account"
       ]
     },
     {
-      "Name": "BalanceInqury",
+      "Name": "BalanceInquiry",
       "Text": [
         "Balance inquiry for",
         "Available Balance",
@@ -140,6 +142,6 @@
     }
   ],
   "Preferences": {
-    "DownloadPath": "C:\\Users\\Brian\\Desktop"
+    "DownloadPath": "C:\\Users\\Brian\\Desktop\\Screenshots"
   }
 }
