--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -57,7 +57,7 @@
         "Welcome",
         "Please insert and remove your card"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "OutService",
@@ -65,56 +65,56 @@
         "This ATM is temporarily unavailable",
         "We're sorry for the inconvenience"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "Language",
       "Text": [
         "Please select the language you wish to use"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "PIN",
       "Text": [
         "Please enter your Personal Identification Number"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionType",
       "Text": [
         "Please select the type of transaction by pressing the appropriate key"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "AccountType",
       "Text": [
         "Please select an account type"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "BalanceDestination",
       "Text": [
         "Where would you like your balance"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "PleaseWait",
       "Text": [
         "Please wait"
       ],
-      "MatchConfidence": "1.00"
+      "MatchConfidence": 1.00
     },
     {
       "Name": "AccountName",
       "Text": [
         "Please select the desired account"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "BalanceInquiry",
@@ -123,7 +123,7 @@
         "Available Balance",
         "Total Balance"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionComplete",
@@ -131,7 +131,7 @@
         "Your transaction is complete",
         "Do you want another transaction"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "MoreTime",
@@ -139,28 +139,28 @@
         "Do you need more time",
         "Would you like more time"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "AnotherTransaction",
       "Text": [
         "Do you want another transaction"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionCancelled",
       "Text": [
         "Your transaction has been cancelled"
       ],
-      "MatchConfidence": "0.75"
-    }
+      "MatchConfidence": 0.75
+    },
     {
       "Name": "TakeCard",
       "Text": [
         "Please take your card"
       ],
-      "MatchConfidence": "0.75"
+      "MatchConfidence": 0.75
     }
   ],
   "Preferences": {
