--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -68,7 +68,7 @@
       "MatchConfidence": 0.75
     },
     {
-      "Name": "Language",
+      "Name": "LanguageSelection",
       "Text": [
         "Please select the language you wish to use"
       ],
@@ -98,7 +98,7 @@
     {
       "Name": "BalanceDestination",
       "Text": [
-        "Where would you like your balance"
+        "Where would you like your balance?"
       ],
       "MatchConfidence": 0.75
     },
@@ -129,22 +129,22 @@
       "Name": "TransactionComplete",
       "Text": [
         "Your transaction is complete",
-        "Do you want another transaction"
+        "Do you want another transaction?"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "MoreTime",
       "Text": [
-        "Do you need more time",
-        "Would you like more time"
+        "Do you need more time?",
+        "Would you like more time?"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "AnotherTransaction",
       "Text": [
-        "Do you want another transaction"
+        "Do you want another transaction?"
       ],
       "MatchConfidence": 0.75
     },
