--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -52,46 +52,53 @@
   },
   "Screens": [
     {
+      "Name": "Desktop",
+      "Text": [
+        "Recycle bin"
+      ],
+      "MatchConfidence": 1.00
+    },
+    {
       "Name": "InService",
       "Text": [
         "Welcome",
-        "Please insert and remove your card"
+        "Please insert and remove your card."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "OutService",
       "Text": [
-        "This ATM is temporarily unavailable",
-        "We're sorry for the inconvenience"
+        "This ATM is temporarily unavailable.",
+        "We're sorry for the inconvenience."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "LanguageSelection",
       "Text": [
-        "Please select the language you wish to use"
+        "Please select the language you wish to use."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "PIN",
       "Text": [
-        "Please enter your Personal Identification Number"
+        "Please enter your Personal Identification Number."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionType",
       "Text": [
-        "Please select the type of transaction by pressing the appropriate key"
+        "Please select the type of transaction by pressing the appropriate key."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "AccountType",
       "Text": [
-        "Please select an account type"
+        "Please select an account type."
       ],
       "MatchConfidence": 0.75
     },
@@ -105,30 +112,30 @@
     {
       "Name": "PleaseWait",
       "Text": [
-        "Please wait"
+        "Please wait..."
       ],
       "MatchConfidence": 1.00
     },
     {
       "Name": "AccountName",
       "Text": [
-        "Please select the desired account"
+        "Please select the desired account."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "BalanceInquiry",
       "Text": [
-        "Balance inquiry for",
-        "Available Balance",
-        "Total Balance"
+        "Balance inquiry for:",
+        "Available Balance:",
+        "Total Balance:"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionComplete",
       "Text": [
-        "Your transaction is complete",
+        "Your transaction is complete.",
         "Do you want another transaction?"
       ],
       "MatchConfidence": 0.75
@@ -151,14 +158,14 @@
     {
       "Name": "TransactionCancelled",
       "Text": [
-        "Your transaction has been cancelled"
+        "Your transaction has been cancelled."
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "TakeCard",
       "Text": [
-        "Please take your card"
+        "Please take your card."
       ],
       "MatchConfidence": 0.75
     }
