--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -39,7 +39,8 @@
   "Terminal": {
     "Host": "http://10.44.112.155:13467",
     "HwProfile": "1744febb-dd28-433e-aa1b-33139c820d2e",
-    "AppStartup": "C:\\Users\\Public\\Desktop\\SSTAuto1.BAT"
+    "AppStartup": "C:\\Users\\Public\\Desktop\\SSTAuto1.BAT",
+    "StandardDelay": 1000
   },
   "Card": {
     "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
@@ -54,111 +55,106 @@
     {
       "Name": "InService",
       "Text": [
-        "Welcome",
-        "Please insert and remove your card."
+        "Please insert and remove your card"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "OutService",
       "Text": [
-        "This ATM is temporarily unavailable.",
-        "We're sorry for the inconvenience."
+        "This ATM is temporarily unavailable We're sorry for the inconvenience"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "LanguageSelection",
       "Text": [
-        "Please select the language you wish to use."
+        "Please select the language you wish to use"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "PIN",
       "Text": [
-        "Please enter your Personal Identification Number."
+        "Please enter your Personal Identification Number"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionType",
       "Text": [
-        "Please select the type of transaction by pressing the appropriate key."
+        "Please select the type of transaction by pressing the appropriate key"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "AccountType",
       "Text": [
-        "Please select an account type."
+        "Please select an account type"
       ],
-      "MatchConfidence": 0.75
+      "MatchConfidence": 0.80
     },
     {
       "Name": "BalanceDestination",
       "Text": [
-        "Where would you like your balance?"
+        "Where would you like your balance"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "PleaseWait",
       "Text": [
-        "Please wait..."
+        "Please wait"
       ],
       "MatchConfidence": 1.00
     },
     {
       "Name": "AccountName",
       "Text": [
-        "Please select the desired account."
+        "Please select the desired account"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "BalanceInquiry",
       "Text": [
-        "Balance inquiry for:",
-        "Available Balance:",
-        "Total Balance:"
+        "Balance inquiry Available Total"
       ],
-      "MatchConfidence": 0.75
+      "MatchConfidence": 0.80
     },
     {
       "Name": "TransactionComplete",
       "Text": [
-        "Your transaction is complete.",
-        "Do you want another transaction?"
+        "Your transaction is complete Do you want another transaction"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "MoreTime",
       "Text": [
-        "Do you need more time?",
-        "Would you like more time?"
+        "Do you need more time",
+        "Would you like more time"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "AnotherTransaction",
       "Text": [
-        "Do you want another transaction?"
+        "Do you want another transaction"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "TransactionCancelled",
       "Text": [
-        "Your transaction has been cancelled."
+        "Your transaction has been cancelled"
       ],
       "MatchConfidence": 0.75
     },
     {
       "Name": "TakeCard",
       "Text": [
-        "Please take your card."
+        "Please take your card"
       ],
       "MatchConfidence": 0.75
     }
