--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -39,8 +39,7 @@
   "Terminal": {
     "Host": "http://10.44.112.155:13467",
     "HwProfile": "1744febb-dd28-433e-aa1b-33139c820d2e",
-    "AppStartup": "C:\\Users\\Public\\Desktop\\SSTAuto1.BAT",
-    "StandardDelay": 2000
+    "AppStartup": "C:\\Users\\Public\\Desktop\\SSTAuto1.BAT"
   },
   "Card": {
     "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
