--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -48,7 +48,8 @@
   "Transaction": {
     "Language": "English",
     "AccountType": "Checking",
-    "AccountName": "Checking|T"
+    "AccountName": "Checking|T",
+    "StandardDelay": 5000
   },
   "Screens": [
     {
