Refactor to library method naming conventions and rename some screens

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -53,14 +53,14 @@
   },
   "Screens": [
     {
-      "Name": "InService",
+      "Name": "Welcome",
       "Text": [
         "Please insert and remove your card"
       ],
       "MatchConfidence": 0.80
     },
     {
-      "Name": "OutService",
+      "Name": "OutOfService",
       "Text": [
         "This ATM is temporarily unavailable We're sorry for the inconvenience"
       ],
