--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -46,10 +46,11 @@
     "Pin": "1234"
   },
   "Transaction": {
+    "StandardDelay": 5000,
     "Language": "English",
     "AccountType": "Checking",
     "AccountName": "Checking|T",
-    "StandardDelay": 5000
+    "ReceiptOption": "Display Balance"
   },
   "Screens": [
     {
