Add receipt options

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -50,7 +50,10 @@
     "Language": "English",
     "AccountType": "Checking",
     "AccountName": "Checking|T",
-    "ReceiptOption": "Display Balance"
+    "ReceiptOption1": "Print Receipt",
+    "ReceiptOption2": "Display Balance",
+    "ReceiptOption": "Print and Display"
+
   },
   "Screens": [
     {
