Re-organize appSettings
Begin separation of ConsumerTransaction from AutomatedTransaction

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -36,134 +36,232 @@
     "Atm": "/api/v1/atm",
     "WebFast": "/api/v1/wft"
   },
+  "Preferences": {
+    "DownloadPath": "C:\\Users\\Brian\\Desktop\\Screenshots"
+  },
   "Terminal": {
     "Host": "http://10.44.112.155:13467",
     "HwProfile": "1744febb-dd28-433e-aa1b-33139c820d2e",
     "AppStartup": "C:\\Users\\Public\\Desktop\\SSTAuto1.BAT"
   },
-  "Card": {
-    "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
-    "Pin": "1234"
-  },
-  "Transaction": {
+  "ConsumerTransaction": {
     "StandardDelay": 5000,
+    "Card": {
+      "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
+      "Pin": "1234"
+    },
     "Language": "English",
     "AccountType": "Checking",
     "AccountName": "Checking|T",
     "ReceiptOption1": "Print Receipt",
     "ReceiptOption2": "Display Balance",
-    "ReceiptOption": "Print and Display"
-
+    "ReceiptOption": "Print and Display",
+    "ScreenDefinitions": [
+      {
+        "Name": "Welcome",
+        "Text": [
+          "Please insert and remove your card"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "OutOfService",
+        "Text": [
+          "This ATM is temporarily unavailable We're sorry for the inconvenience"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "LanguageSelection",
+        "Text": [
+          "Please select the language you wish to use"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "PIN",
+        "Text": [
+          "Please enter your Personal Identification Number"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "TransactionType",
+        "Text": [
+          "Please select the type of transaction by pressing the appropriate key"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "AccountType",
+        "Text": [
+          "Please select an account type"
+        ],
+        "MatchConfidence": 1.00
+      },
+      {
+        "Name": "BalanceDestination",
+        "Text": [
+          "Where would you like your balance"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "PleaseWait",
+        "Text": [
+          "Please wait"
+        ],
+        "MatchConfidence": 1.00
+      },
+      {
+        "Name": "AccountName",
+        "Text": [
+          "Please select the desired account"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "BalanceInquiry",
+        "Text": [
+          "Balance inquiry Available Total"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "TransactionComplete",
+        "Text": [
+          "Your transaction is complete Do you want another transaction"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "MoreTime",
+        "Text": [
+          "Do you need more time",
+          "Would you like more time"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "AnotherTransaction",
+        "Text": [
+          "Do you want another transaction"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "TransactionCancelled",
+        "Text": [
+          "Your transaction has been cancelled"
+        ],
+        "MatchConfidence": 0.80
+      },
+      {
+        "Name": "TakeCard",
+        "Text": [
+          "Please take your card"
+        ],
+        "MatchConfidence": 0.80
+      }
+    ]
   },
-  "Screens": [
-    {
-      "Name": "Welcome",
-      "Text": [
-        "Please insert and remove your card"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "OutOfService",
-      "Text": [
-        "This ATM is temporarily unavailable We're sorry for the inconvenience"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "LanguageSelection",
-      "Text": [
-        "Please select the language you wish to use"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "PIN",
-      "Text": [
-        "Please enter your Personal Identification Number"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "TransactionType",
-      "Text": [
-        "Please select the type of transaction by pressing the appropriate key"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "AccountType",
-      "Text": [
-        "Please select an account type"
-      ],
-      "MatchConfidence": 1.00
-    },
-    {
-      "Name": "BalanceDestination",
-      "Text": [
-        "Where would you like your balance"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "PleaseWait",
-      "Text": [
-        "Please wait"
-      ],
-      "MatchConfidence": 1.00
-    },
-    {
-      "Name": "AccountName",
-      "Text": [
-        "Please select the desired account"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "BalanceInquiry",
-      "Text": [
-        "Balance inquiry Available Total"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "TransactionComplete",
-      "Text": [
-        "Your transaction is complete Do you want another transaction"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "MoreTime",
-      "Text": [
-        "Do you need more time",
-        "Would you like more time"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "AnotherTransaction",
-      "Text": [
-        "Do you want another transaction"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "TransactionCancelled",
-      "Text": [
-        "Your transaction has been cancelled"
-      ],
-      "MatchConfidence": 0.80
-    },
-    {
-      "Name": "TakeCard",
-      "Text": [
-        "Please take your card"
-      ],
-      "MatchConfidence": 0.80
+  "AutomatedTransaction": {
+    "BalanceInquiry": {
+      "StandardDelay": 5000,
+      "Card": {
+        "Id": "f2305283-bb84-49fe-aba6-cd3f7bcfa5ba",
+        "Pin": "1234"
+      },
+      "Language": "English",
+      "AccountType": "Checking",
+      "AccountName": "Checking|T",
+      "ReceiptOption1": "Print Receipt",
+      "ReceiptOption2": "Display Balance",
+      "ReceiptOption": "Print and Display",
+      "ScreenFlow": [
+        {
+          "Name": "Welcome",
+          "Text": [
+            "Please insert and remove your card"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "InsertCard"
+        },
+        {
+          "Name": "LanguageSelection",
+          "Text": [
+            "Please select the language you wish to use"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "English"
+        },
+        {
+          "Name": "PIN",
+          "Text": [
+            "Please enter your Personal Identification Number"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "1234"
+        },
+        {
+          "Name": "TransactionType",
+          "Text": [
+            "Please select the type of transaction by pressing the appropriate key"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "Account Balance"
+        },
+        {
+          "Name": "AccountType",
+          "Text": [
+            "Please select an account type"
+          ],
+          "MatchConfidence": 1.00,
+          "Response": "Checking"
+        },
+        {
+          "Name": "BalanceDestination",
+          "Text": [
+            "Where would you like your balance"
+          ],
+          "MatchConfidence": 0.80,
+          "Response1": "Print Receipt",
+          "Response2": "Display Balance",
+          "Response": "Print and Display"
+        },
+        {
+          "Name": "AccountName",
+          "Text": [
+            "Please select the desired account"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "Checking|T"
+        },
+        {
+          "Name": "BalanceInquiry",
+          "Text": [
+            "Balance inquiry Available Total"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "Continue"
+        },
+        {
+          "Name": "TransactionComplete",
+          "Text": [
+            "Your transaction is complete Do you want another transaction"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "No"
+        },
+        {
+          "Name": "TakeCard",
+          "Text": [
+            "Please take your card"
+          ],
+          "MatchConfidence": 0.80,
+          "Response": "TakeCard"
+        }
+      ]
     }
-  ],
-  "Preferences": {
-    "DownloadPath": "C:\\Users\\Brian\\Desktop\\Screenshots"
   }
 }
