--- a/ConsoleUI/ConsoleUI.csproj
+++ b/ConsoleUI/ConsoleUI.csproj
@@ -29,7 +29,7 @@
 		<Content Include="AvailableScreens.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
-		<Content Include="SamplePlaylist\EdgePlaylist.json">
+		<Content Include="SamplePlaylists\EdgePlaylist.json">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</Content>
 		<Content Include="Simulation.json">
