Update nuget packages and configuration

--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -10,6 +10,7 @@
       "LogFolder": "",
       "LogMaxBytes": 52428800,
       "LogMaxCount": 10,
+      "MultilineFormat": true,
       "IndentMultilineMessages": false,
       "ConsoleLogging": true,
       "EnableConsoleColors": true,
