--- a/ConsoleUI/appsettings.json
+++ b/ConsoleUI/appsettings.json
@@ -2,8 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "System": "Debug",
-      "Microsoft": "Debug"
+      "System": "Information",
+      "Microsoft": "Information"
     },
     "FileLogger": {
       "LogName": "ParagonAtm",
